argocd/base/kiali/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
