argocd/base/kiali/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: kiali
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-gateway
      sectionName: https
  hostnames:
    - kiali.CLUSTER_DOMAIN
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
